# supervisor

./: .gitignore
action_executor/: CMakeLists.txt  package.xml
action_executor/Parameters/: ActionExecutor.yaml  SaveTraj.yaml  SaveTraj1.yaml  SaveTraj2.yaml  SaveTraj3.yaml  SaveTraj4.yaml
action_executor/include/action_executor/: action_executor.h  connector.h  mainpage.h  virtual_action.h
action_executor/launch/: ActionExecutor.launch
action_executor/src/: action_executor.cpp  connector.cpp  main.cpp  virtual_action.cpp
action_executor/src/Actions/: .pick.cpp.swp  drop.cpp  moveTo.cpp  pick.cpp  pickAndDrop.cpp  pickAndPlace.cpp  pickAndPlaceReachable.cpp  pickanddrop.cpp  pickandplace.cpp  pickandplacereachable.cpp  place.cpp  placeReachable.cpp  placereachable.cpp  scan.cpp  template.cpp
action_executor/trajs/: SaveTraj.yaml
data_manager/: CMakeLists.txt  package.xml
data_manager/Parameters/: DataManager.yaml
data_manager/include/data_manager/: mainpage.h
data_manager/launch/: DataManager.launch
data_manager/src/: main.cpp
dialogue_node/: CMakeLists.txt  package.xml
dialogue_node/Parameters/: DialogueNode.yaml
dialogue_node/launch/: DialogueNode.launch
dialogue_node/src/: main.cpp
goal_manager/: CMakeLists.txt  package.xml
goal_manager/Parameters/: GoalManager.yaml
goal_manager/launch/: GoalManager.launch
goal_manager/src/: goal_manager.cpp  main.cpp
human_monitor/: CMakeLists.txt  package.xml
human_monitor/Parameters/: HumanMonitor.yaml  HumanMonitor2.yaml  HumanMonitor3.yaml  HumanMonitor4.yaml
human_monitor/launch/: HumanMonitor.launch
human_monitor/src/: human_monitor.cpp  main.cpp
human_simulator/: CMakeLists.txt  package.xml
human_simulator/Parameters/: HumanSimulator.yaml
human_simulator/launch/: HumanSimulator.launch
human_simulator/src/: main.cpp
launchs/: CMakeLists.txt  Supervisor.launch  Toaster.launch  package.xml
launchs/Parameters/: ActionExecutor.yaml  Dialogue.yaml  Entities.yaml  Environment.yaml  Environment_1.yaml  Environment_2.yaml  Environment_3.yaml  Environment_4.yaml  General.yaml  General_RS_all.yaml  General_RS_none.yaml  General_adapt.yaml  Goals.yaml  HATP.yaml  HighLevelActions.yaml  HumanMonitoring.yaml  Interface.yaml  MentalState.yaml  Planning.yaml  Scan_simu.yaml  Scan_simu1.yaml  Scan_simu10.yaml  Scan_simu2.yaml  Scan_simu3.yaml  Scan_simu4.yaml  Scan_simu5.yaml  Scan_simu6.yaml  Scan_simu7.yaml  Scan_simu8.yaml  Scan_simu9.yaml
launchs/examples/: blocks.sh  blocks_robot.sh  scan.sh  scan_robot.sh  stack.sh  stack_robot.sh
launchs/launch/: ActionExecutor.launch  GTP.launch  HATP.launch  Simu.launch  Supervisor.launch  Supervisor_pc.launch  Supervisor_robot.launch  Supervisor_robotRS_all_1.launch  Supervisor_robotRS_all_2.launch  Supervisor_robotRS_all_3.launch  Supervisor_robotRS_all_4.launch  Supervisor_robotRS_none_1.launch  Supervisor_robotRS_none_2.launch  Supervisor_robotRS_none_3.launch  Supervisor_robotRS_none_4.launch  Supervisor_robot_adapt_1.launch  Supervisor_robot_adapt_2.launch  Supervisor_robot_adapt_3.launch  Supervisor_robot_adapt_4.launch  Supervisor_robot_nego_1.launch  Supervisor_robot_nego_2.launch  Supervisor_robot_nego_3.launch  Supervisor_robot_nego_4.launch  Supervisor_simu.launch  Toaster.launch  hatp.launch
launchs/scripts/: .robot_scan.sh.swo  .robot_scan.sh.swp  blocks.sh  fam_task.sh  head.sh  head_reset.sh  init_set_up_blocks.sh  init_set_up_blocks1.sh  init_set_up_blocks1_rf.sh  init_set_up_blocks2.sh  init_set_up_blocks2_rf.sh  init_set_up_blocks3.sh  init_set_up_blocks3_rf.sh  init_set_up_blocks4.sh  init_set_up_blocks4_rf.sh  reset_robot_scan.sh  reset_robot_scan1.sh  reset_robot_scan2.sh  reset_robot_scan3.sh  reset_robot_scan4.sh  reset_scan.sh  reset_scan1.sh  reset_scan2.sh  robot_scan.sh  robot_scan_no_mocap.sh  scan.sh  simu_scan.sh
logs/: NbActions.txt  (+2 more)
mental_states/: CMakeLists.txt  package.xml
mental_states/Parameters/: MentalStates.yaml
mental_states/launch/: MentalStates.launch
mental_states/src/: db_interface.cpp  main.cpp  ms_manager.cpp
plan_elaboration/: CMakeLists.txt  package.xml
plan_elaboration/Parameters/: PlanElaboration.yaml
plan_elaboration/launch/: PlanElaboration.launch
plan_elaboration/src/: main.cpp  plan_elaboration.cpp  virtual_domain.cpp
plan_executor/: CMakeLists.txt  package.xml
plan_executor/Parameters/: PlanExecutor.yaml
plan_executor/launch/: PlanExecutor.launch
plan_executor/src/: main.cpp
plan_maintainer/: CMakeLists.txt  package.xml
plan_maintainer/launch/: PlanMaintainer.launch
plan_maintainer/src/: .main.cpp.swp  main.cpp
robot_decision/: CMakeLists.txt  package.xml
robot_decision/Parameters/: RobotDecision.yaml  RobotDecision_nego.yaml
robot_decision/launch/: RobotDecision.launch
robot_decision/src/: .main.cpp.swp  main.cpp
simple_head_manager/: CMakeLists.txt  package.xml
simple_head_manager/Parameters/: SimpleHeadManager.yaml
simple_head_manager/launch/: SimpleHeadManager.launch
simple_head_manager/src/: main.cpp
supervisor_msgs/: CMakeLists.txt  package.xml
supervisor_msgs/action/: ActionExecutor.action
supervisor_msgs/msg/: Action.msg  ActionList.msg  ActionMS.msg  ActionMSList.msg  ActionsList.msg  AgentActivity.msg  AgentKnowledge.msg  AgentList.msg  Bool.msg  Focus.msg  Goal.msg  GoalMS.msg  GoalsList.msg  Info.msg  Knowledge.msg  Link.msg  MentalState.msg  MentalStatesList.msg  Plan.msg  PlanMS.msg  SharedPlan.msg
supervisor_msgs/srv/: AbortGoal.srv  AbortPlan.srv  ActionState.srv  Ask.srv  ChangeState.srv  EndPlan.srv  FactsAreIn.srv  GetActionState.srv  GetActionTodo.srv  GetActions.srv  GetAllAgents.srv  GetFactsAgent.srv  GetInfo.srv  GetInfoDia.srv  GiveInfo.srv  HumanAction.srv  HumanActionSimu.srv  HumanPick.srv  HumanPlace.srv  InfoGiven.srv  NewPlan.srv  Say.srv  SharePlan.srv  SolveDivergentBelief.srv  StartGoal.srv
tests/: CMakeLists.txt  package.xml
tests/launch/: TestActionExecutor.launch
tests/scripts/: test_pickandplace.sh
tests/src/: action_test.cpp  ms_test.cpp  pr2motion_test.cpp  test_pick.cpp  test_pickandplace.cpp
(+223 files in other folders)
