<?xml version="1.0"?>
<package>

  <name>action_executor</name>
  <version>0.0.0</version>
  <description>action executor node</description>

  <maintainer email="sdevin@laas.fr">Sandra Devin</maintainer>
  
  <license>TODO</license>
  
  <author email="sdevin@laas.fr">Sandra Devin</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>supervisor_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>supervisor_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
