<?xml version="1.0"?>
<package>

  <name>supervisor_msgs</name>
  <version>0.0.0</version>
  <description>Messages used for supervisor nodes</description>

  <maintainer email="sdevin@laas.fr">Sandra Devin</maintainer>
  
  <license>TODO</license>
  
  <author email="sdevin@laas.fr">Sandra Devin</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>toaster_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>toaster_msgs</run_depend>

</package>
